# fundas

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  SETUP_COMPLETE.md  pyproject.toml  requirements.txt  test_setup.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
docs/: api-reference.md  api_reference.rst  caching.md  conf.py  configuration.md  contributing.md  contributing.rst  getting-started.md  getting_started.rst  how_to_guides.rst  index.md  index.rst  schema.md
docs/guides/: read_pdf.rst
docs/readers/: audio.md  image.md  pdf.md  video.md  webpage.md
examples/: README.md  basic_usage.py  quick_image_test.py  schema_typed_output.py  test_audio.py  test_image_example.py  test_pdf_extraction.py  test_pdf_structure.py  test_structured_output.py  test_webpage.py  usage_example.py  webpage_scraping.py
fundas/: __init__.py  cache.py  core.py  exporters.py  readers.py  schema.py
scripts/: validate_release.py
src/fundas/: __init__.py  client.py  core.py  exporters.py  readers.py  schema.py
src/fundas/exporters/: __init__.py  dataframe.py
src/fundas/readers/: __init__.py  audio.py  base.py  image.py  pdf.py  video.py  webpage.py
src/fundas/utils/: __init__.py  json_parser.py  retry.py
tests/: __init__.py  conftest.py  test_cache.py  test_core.py  test_exporters.py  test_readers.py
tests/exporters/: __init__.py  test_dataframe.py
tests/readers/: __init__.py  test_audio.py  test_image.py  test_pdf.py  test_video.py  test_webpage.py
