[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fundas"
version = "0.1.0"
description = "AI-powered Python library that extends pandas to import and analyze complex, unstructured files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AMSeify"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "pypdf2>=3.0.0",
    "pillow>=10.3.0",
    "beautifulsoup4>=4.9.0",
    "opencv-python>=4.8.1.78",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
excel = [
    "openpyxl>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/AMSeify/fundas"
Repository = "https://github.com/AMSeify/fundas"

[tool.setuptools]
packages = ["fundas"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
